--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,5 +15,5 @@ jobs:
         java-version: 1.8
     - name: Build with Gradle
       run: |
-        cd Android/Passenger Security/
+        cd Android/PassengerSecurity/
         ./gradlew build
